--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -138,7 +138,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(/img/fiu-biscayne2.jpg) no-repeat bottom center scroll;
+    background: url(/img/fiu-biscayne2.jpg) no-repeat center center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -252,8 +252,9 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
+.signup-section {
     width: 100%;
+    height: 500px;
     padding: 50px 0;
     color: #fff;
     background: url(/img/downloads-bg.jpg) no-repeat center center scroll;
@@ -262,6 +263,24 @@ a:focus {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+#faq h5 {
+    font-weight: bold;
+    font-size: 16px;
+    margin: 30px 0px 5px 0px;
+    text-transform: none;
+}
+
+#faq .a {
+    font-size: 16px;
+    margin: 0px 0px 10px 30px;
+}
+
+.instructor-section {
+    height: auto;
+    font-size: 18px;
+    padding: 100px 0;
 }
 
 #map {
@@ -336,10 +355,16 @@ ul.banner-social-buttons li {
 
 footer {
     padding: 50px 0;
+    width: 100%;
+    background: white;
+    color: black;
+    border-top: 2px solid black;
 }
 
 footer p {
     margin: 0;
+    margin-top: 50px;
+    font-size: 16px;
 }
 
 ::-moz-selection {
@@ -362,13 +387,29 @@ img::-moz-selection {
     background: 0 0;
 }
 
+img.strip {
+    width: 100%;
+}
+
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+table.table-large {
+    margin-top: 30px;
+    font-size: 18px;
+    color: #fff;
+}
+
+/*table.table-large tr:nth-child(even) {background-color: #aaa; }
+table.table-large tr:nth-child(odd) {background-color: #bbb; }*/
+/*table.table-large a { color: #303; }*/
+
+td.thumb {
+    width: 180px;
+}
+
+.thumb img {
+    max-height: 160px;
+    max-width: 160px;
 }
