--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -283,6 +283,10 @@ a:focus {
     padding: 100px 0;
 }
 
+.anchor {
+    padding-top: 200px;
+}
+
 #map {
     width: 100%;
     height: 200px;
@@ -291,7 +295,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 200px;
+        padding-top: 75px;
     }
 
     .download-section {
