--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
                         <a class="page-scroll" href="#signup">Sign Up</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#accommodations">Accommodations</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
