--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include header.html %}
     {% include about.html %}
     {% include signup.html %}
+    {% include accommodations.html %}
     {% include contact.html %}
     {% include map.html %}
     {% include footer.html %}
