--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -138,7 +138,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(/img/fiu-biscayne2.jpg) no-repeat center center scroll;
+    background: url(/img/thing.jpg) no-repeat center center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -152,7 +152,7 @@ a:focus {
 }
 
 .intro .intro-body .brand-heading {
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .intro .intro-body .intro-text {
@@ -166,7 +166,7 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 100px;
+        font-size: 70px;
     }
 
     .intro .intro-body .intro-text {
