--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    NiMARE Sprint
+                    Coastal Coding
                 </a>
             </div>
 
