--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,14 +1,36 @@
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About NiMARE</h2>
-                <p>NiMARE (Neuroimaging Meta-Analysis Research Environment) is a new Python package for performing analyses using neuroimaging meta-analytic data. Current tools for neuroimaging meta-analyses are spread out across several packages and languages. NiMARE aims to provide a standardized interface for a broad range of algorithms, along with interfaces to open meta-analytic resources like Neurosynth, NeuroVault, and brainspell.</p>
-
-                <h2>About the sprint</h2>
-                <p>The NiMARE coding sprint will be a three-day hackathon in Miami, Florida, at Florida International University's scenic Biscayne Bay campus. The sprint will occur after a three-day Nipype workshop, with a one-day rest period between, in which participants can enjoy Miami.</p>
-                <p>At the sprint, we’ll be working to design a standard for representing meta-analytic data, to add implementations for new tools, and to improve the documentation and test coverage of the existing codebase. Anyone interested in contributing to this new package is welcome to join. Experience with Python or neuroimaging meta-analysis recommended, but not necessary. On the first day of the sprint there will be an overview of neuroimaging meta-analytic methods for beginners.
-                </p>
-            </div>
-        </div>
-    </section>
+<!-- About Section -->
+<section id="about" class="container content-section text-center">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h2>10-12 January 2019<br/>ReproNim/Nipype Workshop</h2>
+      <p>
+        The goals of this workshop are two-fold. First, to enable attendees to become familiar with best
+        practices for reproducible analysis from
+        <a href=http://www.reproducibleimaging.org>ReproNim</a>.
+        Second, to learn how to create scalable and re-executable neuroimaging workflows with the upcoming
+        <a href=https://nipype.readthedocs.io/en/latest>Nipype 2.0</a> platform.
+        Advanced users are welcome to learn about the changes and hack with Nipype developers.
+      </p>
+      <h2>14-16 January 2019<br/>NiMARE Code Sprint</h2>
+      <h3>ABOUT NIMARE</h3>
+      <p>
+        NiMARE (Neuroimaging Meta-Analysis Research Environment) is a new Python package for
+        performing analyses using neuroimaging meta-analytic data. Current tools for neuroimaging
+        meta-analyses are spread out across several packages and languages. NiMARE aims to provide a
+        standardized interface for a broad range of algorithms, along with interfaces to open
+        meta-analytic resources like <a href=http://neurosynth.org>Neurosynth</a>,
+        <a href=https://neurovault.org>NeuroVault</a>, and
+        <a href=https://brainspell.herokuapp.com>brainspell</a>.
+      </p>
+      <h3>ABOUT THE SPRINT</h3>
+      <p>
+        The three-day NiMARE coding sprint will occur after the Nipype workshop, with a one-day rest
+        period between, in which participants can enjoy Miami. At the sprint, we’ll be working to design
+        a standard for representing meta-analytic data, to add implementations for new tools, and to
+        improve the documentation and test coverage of the existing codebase. Anyone interested in
+        contributing to this new package is welcome to join. Experience with Python or neuroimaging
+        meta-analysis recommended, but not necessary.
+      </p>
+    </div>
+  </div>
+</section>
