--- a/_includes/accommodations.html
+++ b/_includes/accommodations.html
@@ -1,9 +1,39 @@
-    <!-- About Section -->
-    <section id="accommodations" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Accommodations</h2>
-                <p>There are hotels nearby.</p>
-            </div>
-        </div>
-    </section>
+<!-- About Section -->
+<section id="accommodations" class="container content-section text-center">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h2>Accommodations</h2>
+      <p>
+        Attendees interested in staying on the beach may want to consider hotels
+        just south of the BBC, in Bal Harbour and Surfside, or just north of the
+        BBC in Sunny Isles.
+      </p>
+
+      <h2>Hotel Recommendations</h2>
+      <h3>Hotel Option #1: <a href=https://www.grandbeachhotel.com/hotels/surfside>Grand Beach Hotel</a></h3>
+      <p>
+        (from $281/night Oceanfront, from $207/night West)
+        <br/>
+        5.7 miles from workshop site
+        <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
+          <img src="img/bbc-map.png" title="Biscayne Bay campus" class="center" />
+        </a>
+      </p>
+
+      <h3>Hotel Option #2: <a href=https://www.bestwestern.com/en_US/book/hotels-in-north-miami/best-western-plus-windsor-inn/propertyCode.10349.html>Best Western Plus Windsor Inn</a></h3>
+      <p>
+        (from $166/night)
+        <br/>
+        3.4 miles from workshop site
+        <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
+          <img src="img/bbc-map.png" title="Biscayne Bay campus" class="center" />
+        </a>
+      </p>
+      <p>
+        Transportation between the FIU BBC and the recommended hotels will not be provided.
+        Attendees are encouraged to factor these additional costs into their travel budget. Both Lyft
+        and Uber are available in the greater Miami metropolitan area.
+      </p>
+    </div>
+  </div>
+</section>
