--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,4 +1,46 @@
 <!-- Map Section -->
-<a href="https://goo.gl/maps/rMFk7aUYtVQ2">
-  <img src="img/bbc-map.png" title="Biscayne Bay campus" class="center" />
-</a>
+<section id="location" class="container content-section text-center">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h2>Location</h2>
+      <p>
+        Coastal Coding 2019 will be hosted at the scenic
+        <a href=https://www.fiu.edu/locations/bbc/index.html>Biscayne Bay Campus (BBC)</a>
+        of <a href=https://www.fiu.edu>Florida International University (FIU)</a>,
+        located at 3000 NE 151 st in Miami, FL, USA.
+      </p>
+      <p>
+        FIU’s BBC is located 17 miles from the Miami International Airport (MIA)
+        or 19 miles from the Fort Lauderdale-Hollywood International Airport (FLL).
+      </p>
+      <p>
+        The events will be held in the Wolfe University Center, WUC 155.
+      </p>
+      <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
+        <img src="img/bbc-map.png" title="Biscayne Bay campus" class="center" />
+      </a>
+      <br/>
+      <p>
+        January weather in Miami is simply spectacular and an excellent choice for a winter getaway.
+        This is our coolest and driest time of the year, with lots of sunshine and clear skies. Average
+        highs are 76 degrees F (25 degrees C) and average lows are 60 degrees F (16 degrees C). UV
+        levels will be high so bring plenty of sunscreen.
+      </p>
+      <p>
+        FIU’s BBC is located right on Biscayne Bay, and offers
+        <a href=https://studentaffairs.fiu.edu/health-and-fitness/recreation/bbc/outdoor-adventure-x/index.php>many outdoor recreational opportunities</a>,
+        an
+        <a href=https://studentaffairs.fiu.edu/health-and-fitness/recreation/bbc/aquatic-center/index.php>Aquatic Center</a>,
+        and a
+        <a href=https://studentaffairs.fiu.edu/health-and-fitness/recreation/bbc/fitness-center/index.php>Fitness Center</a>.
+        The BBC is adjacent to the
+        <a href=https://www.floridastateparks.org/parks-and-trails/oleta-river-state-park>Oleta River State Park</a>,
+        a gorgeous
+        natural oasis of hardwood hammocks and mangroves. Visitors can enjoy hiking, off-road
+        bicycling trails, or paddling along lush mangrove forests on the Oleta River. Kayak and
+        SUP (paddleboard) rentals are available through the
+        <a href=https://www.bluemoonoutdoor.com>Blue Moon Outdoor Center</a>.
+      </p>
+    </div>
+  </div>
+</section>
