--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,10 +18,13 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#signup">Sign Up</a>
+                        <a class="page-scroll" href="#location">Location</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#accommodations">Accommodations</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#signup">Sign Up</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
