--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -131,6 +131,13 @@ a:focus {
     }
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+}
+
 .intro {
     display: table;
     width: 100%;
@@ -138,7 +145,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(/img/thing.jpg) no-repeat center center scroll;
+    background: url(/img/thing3.png) no-repeat center center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
