--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -138,6 +138,13 @@ a:focus {
     width: 700px;
 }
 
+.center2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+}
+
 .intro {
     display: table;
     width: 100%;
