--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,13 @@
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
-        </div>
-    </footer>
+<!-- Footer -->
+<footer>
+  <div class="container text-center">
+    <p>
+      Coastal Coding 2019 is supported by the National Science Foundation
+      (Award 1631325) and the
+      <a href=http://cismri.fiu.edu>FIU Center for Imaging Science</a>.
+    </p>
+    <p>
+      Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}
+    </p>
+  </div>
+</footer>
