--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -2,8 +2,15 @@
 <section id="signup" class="container content-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h2>Sign Up</h2>
-      <p>Sign up to attend the sprint <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">here</a>.</p>
+      <h1>Sign Up</h1>
+      <p>
+        Registration: $125 for one event, $200 for both events
+        <br/>
+        Fees cover breakfast, lunch, snacks, and plenty of coffee
+      </p>
+      <p>
+        link coming soon!
+      </p>
     </div>
   </div>
 </section>
