--- a/_includes/accommodations.html
+++ b/_includes/accommodations.html
@@ -2,7 +2,7 @@
 <section id="accommodations" class="container content-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h2>Accommodations</h2>
+      <h1>Accommodations</h1>
       <p>
         Attendees interested in staying on the beach may want to consider hotels
         just south of the BBC, in Bal Harbour and Surfside, or just north of the
@@ -16,7 +16,7 @@
         <br/>
         5.7 miles from workshop site
         <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
-          <img src="img/bbc-map.png" title="Biscayne Bay campus" class="center" />
+          <img src="img/hotel1-gbh.jpg" title="Biscayne Bay campus" class="center2" />
         </a>
       </p>
 
@@ -26,7 +26,7 @@
         <br/>
         3.4 miles from workshop site
         <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
-          <img src="img/bbc-map.png" title="Biscayne Bay campus" class="center" />
+          <img src="img/hotel2-bw.jpg" title="Biscayne Bay campus" class="center2" />
         </a>
       </p>
       <p>
