--- a/_includes/map.html
+++ b/_includes/map.html
@@ -2,7 +2,7 @@
 <section id="location" class="container content-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h2>Location</h2>
+      <h1>Location</h1>
       <p>
         Coastal Coding 2019 will be hosted at the scenic
         <a href=https://www.fiu.edu/locations/bbc/index.html>Biscayne Bay Campus (BBC)</a>
@@ -17,7 +17,7 @@
         The events will be held in the Wolfe University Center, WUC 155.
       </p>
       <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
-        <img src="img/bbc-map.png" title="Biscayne Bay campus" class="center" />
+        <img src="img/hotels.png" title="Biscayne Bay campus" class="center" />
       </a>
       <br/>
       <p>
