--- a/_includes/accommodations.html
+++ b/_includes/accommodations.html
@@ -5,8 +5,7 @@
       <h1>Accommodations</h1>
       <p>
         Attendees interested in staying on the beach may want to consider hotels
-        just south of the BBC, in Bal Harbour and Surfside, or just north of the
-        BBC in Sunny Isles.
+        just south of the BBC, in Bal Harbour and Surfside, or just north in Sunny Isles.
       </p>
 
       <h2>Hotel Recommendations</h2>
@@ -36,6 +35,9 @@
         Attendees are encouraged to factor these additional costs into their travel budget. Both Lyft
         and Uber are available in the greater Miami metropolitan area.
       </p>
+      <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
+        <img src="img/hotels.png" title="Biscayne Bay campus" class="center" />
+      </a>
     </div>
   </div>
 </section>
