--- a/_includes/map.html
+++ b/_includes/map.html
@@ -7,7 +7,7 @@
         Coastal Coding 2019 will be hosted at the scenic
         <a href=https://www.fiu.edu/locations/bbc/index.html>Biscayne Bay Campus (BBC)</a>
         of <a href=https://www.fiu.edu>Florida International University (FIU)</a>,
-        located at 3000 NE 151 st in Miami, FL, USA.
+        located at 3000 NE 151 st in Miami, FL.
       </p>
       <p>
         FIU’s BBC is located 17 miles from the Miami International Airport (MIA)
@@ -17,7 +17,7 @@
         The events will be held in the Wolfe University Center, WUC 155.
       </p>
       <a href="https://goo.gl/maps/rMFk7aUYtVQ2">
-        <img src="img/hotels.png" title="Biscayne Bay campus" class="center" />
+        <img src="img/location.png" title="Biscayne Bay campus" class="center" />
       </a>
       <br/>
       <p>
