--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,14 @@
 <!-- Footer -->
 <footer>
   <div class="container text-center">
-    <p>
-      Coastal Coding 2019 is supported by the National Science Foundation
-      (Award 1631325) and the
-      <a href=http://cismri.fiu.edu>FIU Center for Imaging Science</a>.
-    </p>
-    <p>
-      Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}
-    </p>
+    Coastal Coding is dedicate to providing a safe, inclusive, and welcoming
+    environment for everyone;<br/>attendees will be expected to abide by the
+    <a href=https://www.opencon2018.org/code_of_conduct>OpenCon Code of Conduct</a>.
+    <br/><br/>
+    Coastal Coding 2019 is supported by the National Science Foundation
+    (Award 1631325)<br/>and the
+    <a href=http://cismri.fiu.edu>FIU Center for Imaging Science</a>.
+    <br/><br/>
+    Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}
   </div>
 </footer>
