Add registration link.

--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -9,7 +9,7 @@
         Fees cover breakfast, lunch, snacks, and plenty of coffee
       </p>
       <p>
-        link coming soon!
+        Register <a href=https://fiucas.hobsonsradius.com/ssc/aform/KC67127fzx6G0x6712c00l.ssc>here</a>.
       </p>
     </div>
   </div>
