--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,6 +11,10 @@
         <a href=https://nipype.readthedocs.io/en/latest>Nipype 2.0</a> platform.
         Advanced users are welcome to learn about the changes and hack with Nipype developers.
       </p>
+      <p>Requiruements:
+       <li>Working knowledge of Python 3</li>
+       <li>Familiarity with scripting in at least 1 neuroimaging package (e.g., AFNI, ANTS, FSL, FreeSurfer, SPM)</li>
+      </p>
       <h1>14-16 January 2019<br/>NiMARE Code Sprint</h1>
       <h3>ABOUT NIMARE</h3>
       <p>
