--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,11 +9,14 @@
         <a href=http://www.reproducibleimaging.org>ReproNim</a>.
         Second, to learn how to create scalable and re-executable neuroimaging workflows with the upcoming
         <a href=https://nipype.readthedocs.io/en/latest>Nipype 2.0</a> platform.
-        Advanced users are welcome to learn about the changes and hack with Nipype developers.
       </p>
-      <p>This event is targeted towards novice Nipype users who meet the following requirements:</p>
-      <p>Working knowledge of Python 3.</p>
-      <p>Familiarity with scripting in at least 1 neuroimaging package (e.g., AFNI, ANTS, FSL, FreeSurfer, SPM).</p>
+      <p>
+        This event is targeted towards novice neuroimaging users who meet the following requirements: (1) Working
+        knowledge of Python 3; and (2) Familiarity with scripting in at least 1 neuroimaging package (e.g.,
+        AFNI, ANTS, FSL, FreeSurfer, SPM).
+      </p>
+      <p>
+        Advanced users are welcome to learn about the changes and hack with Nipype developers.
       </p>
       <h1>14-16 January 2019<br/>NiMARE Code Sprint</h1>
       <h3>ABOUT NIMARE</h3>
