--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,14 +10,41 @@
         Second, to learn how to create scalable and re-executable neuroimaging workflows with the upcoming
         <a href=https://nipype.readthedocs.io/en/latest>Nipype 2.0</a> platform.
       </p>
-      <p>
-        This event is targeted towards novice neuroimaging users who meet the following requirements: (1) Working
-        knowledge of Python 3; and (2) Familiarity with scripting in at least 1 neuroimaging package (e.g.,
-        AFNI, ANTS, FSL, FreeSurfer, SPM).
-      </p>
+      <ul class="list-group col-sm">
+        <p class="list-group-item-text">This event is targeted towards novice neuroimaging users who meet the following requirements:</p>
+        <p class="list-group-item-text">1. Working knowledge of Python 3</p>
+        <p class="list-group-item-text">2. Familiarity with scripting in at least 1 neuroimaging package (e.g.,
+        AFNI, ANTS, FSL, FreeSurfer, SPM)</p>
+      </ul>
       <p>
         Advanced users are welcome to learn about the changes and hack with Nipype developers.
       </p>
+      <h3>Nipype Workshop Agenda</h3>
+      <ul class="list-group col-sm">
+        <h4 class="list-group-item-heading">Jan 10th - ReproNim: Tools for reproducible practices bootcamp</h4>
+        <p class="list-group-item-text">Introduction to the workshop</p>
+        <p class="list-group-item-text">Reproducibility Basics 1: The UNIX Shell, &nbsp;Neurodocker containers (Docker, Singularity)</p>
+        <p class="list-group-item-text">Reproducibility Basics 2: Datalad, Git/Git-Annex/GitHub</p>
+        <p class="list-group-item-text">Introduction to FAIR data and BIDS</p>
+      </ul>
+      <ul class="list-group col-sm">
+        <h4 class="list-group-item-heading">Jan 11th - Nipype 2.0 Part I</h4>
+        <p class="list-group-item-text">Review Day 1</p>
+        <p class="list-group-item-text">Introduction to Nipype 2.0 dataflow framework</p>
+        <p class="list-group-item-text">Blitz Intros: fMRIPrep, CPAC</p>
+        <p class="list-group-item-text">Graphical Nipype with Giraffe.tools</p>
+        <p class="list-group-item-text">Using Interfaces and Workflows in a script</p>
+        <p class="list-group-item-text">Introducing Pydra: Create your own Workflow</p>
+        <p class="list-group-item-text">Introducing Niflows: Reuse, Create, and Package your own Workflow</p>
+      </ul>
+      <ul class="list-group col-sm">
+        <h4 class="list-group-item-heading">Jan 12th - Nipype 2.0 Part II</h4>
+        <p class="list-group-item-text">Review Day 2</p>
+        <p class="list-group-item-text">Introducing Testkraken: Test your Workflow</p>
+        <p class="list-group-item-text">Using Nipype on HPC and Cloud with public data</p>
+        <p class="list-group-item-text">Blitz Intros: Neuroscout, OpenNeuro</p>
+        <p class="list-group-item-text">Feedback session</p>
+      </ul>
       <h1>14-16 January 2019<br/>NiMARE Code Sprint</h1>
       <h3>ABOUT NIMARE</h3>
       <p>
