Add NiMARE sprint agenda.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -65,6 +65,23 @@
         contributing to this new package is welcome to join. Experience with Python or neuroimaging
         meta-analysis recommended, but not necessary.
       </p>
+      <h3>NiMARE SPRINT AGENDA</h3>
+      <ul class="list-group col-sm">
+        <h4 class="list-group-item-heading">Jan 14th - Meta-analysis bootcamp and hacking</h4>
+        <p class="list-group-item-text">Introduction to neuroimaging meta-analysis</p>
+        <p class="list-group-item-text">Hacking</p>
+        <p class="list-group-item-text">Progress reports</p>
+      </ul>
+      <ul class="list-group col-sm">
+        <h4 class="list-group-item-heading">Jan 15th - Hacking and progress reports</h4>
+        <p class="list-group-item-text">Hacking</p>
+        <p class="list-group-item-text">Progress reports</p>
+      </ul>
+      <ul class="list-group col-sm">
+        <h4 class="list-group-item-heading">Jan 16th - Hacking and presentations</h4>
+        <p class="list-group-item-text">Hacking</p>
+        <p class="list-group-item-text">Project presentations</p>
+      </ul>
     </div>
   </div>
 </section>
